fieldx/tests/uncompilable/stable+serde,sync/priv_accessor.stderr
error[E0624]: method `foo` is private
 --> tests/uncompilable/priv_accessor.rs
  |
  |           #[fieldx(get(private), predicate(off))]
  |  __________________-
  | |         foo:    u32,
  | |___________________- private method defined here
...
  |       let _r = foo.foo();
  |                    ^^^ private method
